@@ -1,5 +1,10 @@
 2011-11-06  Helmut Eller  <heller@common-lisp.net>
 
+	* swank-abcl.lisp (string-to-utf8, string-to-utf8): Implemented.
+	(octets-to-jbytes, jbytes-to-octets): New helpers.
+
+2011-11-06  Helmut Eller  <heller@common-lisp.net>
+
 	* swank-backend.lisp (utf8-to-string, string-to-utf8): New.
 
 2011-11-03  Helmut Eller  <heller@common-lisp.net>
